站点更新： {{ now("YYYY-MM-DD HH:mm:ss") ｝｝

--- a/css/main.css
+++ b/css/main.css
@@ -1705,7 +1705,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #f6a20e;
+  background: #ffba4b;
 }
 .links-of-blogroll {
   font-size: 13px;
