站点更新： {{ now("YYYY-MM-DD HH:mm:ss") ｝｝

--- a/css/main.css
+++ b/css/main.css
@@ -1121,9 +1121,9 @@ pre .javascript .function {
   transform: rotate(30deg);
 }
 .post-body p a {
-  color: #d5e9fd;
+  color: #0593d3;
   border-bottom: none;
-  border-bottom: 1px solid #d5e9fd;
+  border-bottom: 1px solid #0593d3;
 }
 .post-body p a:hover {
   color: #276ac2;
@@ -1705,7 +1705,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ffba4b;
+  background: #c969ff;
 }
 .links-of-blogroll {
   font-size: 13px;
@@ -2795,4 +2795,11 @@ hr {
     width: auto;
     text-align: center;
   }
+}
+.post {
+  margin-top: 60px;
+  margin-bottom: 60px;
+  padding: 25px;
+  -webkit-box-shadow: 0 0 5px rgba(202,203,203,0.5);
+  -moz-box-shadow: 0 0 5px rgba(202,203,204,0.5);
 }
