站点更新： {{ now("YYYY-MM-DD HH:mm:ss") ｝｝

--- a/css/main.css
+++ b/css/main.css
@@ -1705,7 +1705,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #6fd11f;
+  background: #ffeea1;
 }
 .links-of-blogroll {
   font-size: 13px;
@@ -2802,4 +2802,9 @@ hr {
   padding: 25px;
   -webkit-box-shadow: 0 0 5px rgba(202,203,203,0.5);
   -moz-box-shadow: 0 0 5px rgba(202,203,204,0.5);
+}
+.header {
+  height: 24vh;
+  background: #f5f5f5 url("../../images/header_bg.png");
+  background-size: cover;
 }
