--- a/css/main.css
+++ b/css/main.css
@@ -1705,7 +1705,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #ffeea1;
+  background: #74881f;
 }
 .links-of-blogroll {
   font-size: 13px;
